libs/extractor/src/snapshots/extractor__tests__stylex_supports_query.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({\n    base: {\n        display: { default: 'block', '@supports (display: grid)': 'grid' },\n    }\n});\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "block",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "grid",
                level: 0,
                selector: Some(
                    At {
                        kind: Supports,
                        query: "(display:grid)",
                        selector: None,
                        outer: [],
                        file: None,
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst styles = { \"base\": \"a b\" };\n",
}
