libs/extractor/src/snapshots/extractor__tests__stylex_theme_apis_ignore_unresolvable_input.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import stylex from '@stylexjs/stylex';\nconst empty = stylex.defineVars({ dynamic: someValue });\nconst unknownContract = stylex.createTheme(notAContract, { primary: 'navy' });\nconst noOverlap = stylex.createTheme(empty, { missing: 'navy' });\nconst notAnObject = stylex.defineVars(someVariable);\nconst spreadVars = stylex.defineVars({ ...other, kept: 'red' });\nconst spreadTheme = stylex.createTheme(empty, { ...other });\"))"
---
ToBTreeSet {
    styles: {
        Css(
            ExtractCss {
                css: ":root{--b:red;}",
                file: "test.tsx",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst empty = {};\nconst unknownContract = stylex.createTheme(notAContract, { primary: \"navy\" });\nconst noOverlap = \"a\";\nconst notAnObject = stylex.defineVars(someVariable);\nconst spreadVars = { \"kept\": \"var(--b)\" };\nconst spreadTheme = \"a\";\n",
}
