libs/extractor/src/snapshots/extractor__tests__stylex_theme_apis_with_named_imports.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import { defineVars, createTheme, create, props } from '@stylexjs/stylex';\nconst colors = defineVars({ primary: 'blue' });\nconst dark = createTheme(colors, { primary: 'navy' });\nconst styles = create({ box: { color: colors.primary } });\nconst el = <div {...props(dark, styles.box)} />;\"))"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "var(--a)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Css(
            ExtractCss {
                file: "test.tsx",
                order: 1,
                css: ":root{--a:blue;}",
            },
        ),
        Css(
            ExtractCss {
                file: "test.tsx",
                order: 2,
                css: ".b{--a:navy;}",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport { defineVars, createTheme, create, props } from \"@stylexjs/stylex\";\nconst colors = { \"primary\": \"var(--a)\" };\nconst dark = \"b\";\nconst styles = { \"box\": \"c\" };\nconst el = <div {...{ className: \"b c\" }} />;\n",
}
