libs/extractor/src/snapshots/extractor__tests__stylex_types_unresolvable_in_condition.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import stylex from '@stylexjs/stylex';\nconst someVar = getSomething();\nconst styles = stylex.create({ base: { fontSize: { default: stylex.types.length(someVar) } } });\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import stylex from \"@stylexjs/stylex\";\nconst someVar = getSomething();\nconst styles = { \"base\": \"\" };\n",
}
