libs/extractor/src/snapshots/extractor__tests__stylex_variable_declarations_skip_unreadable_entries.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import stylex from '@stylexjs/stylex';\nconst consts = stylex.defineConsts({ ...other, gap: '8px', dynamic: someVar });\nconst vars = stylex.defineVars({ [computed]: 'red', primary: 'blue' });\nconst tryBlock = stylex.positionTry({ ...spread, top: '0' });\nconst styles = stylex.create({ box: { marginTop: consts.gap, color: vars.primary } });\"))"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "var(--a)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-top",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Css(
            ExtractCss {
                css: ":root{--a:blue;}",
                file: "test.tsx",
            },
        ),
        Css(
            ExtractCss {
                css: "@position-try --b{top:0;}",
                file: "test.tsx",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst consts = { \"gap\": \"8px\" };\nconst vars = { \"primary\": \"var(--a)\" };\nconst tryBlock = \"--b\";\nconst styles = { \"box\": \"c d\" };\n",
}
